Closed
Bug 1182607
Opened 10 years ago
Closed 10 years ago
[e10s] <select> element not closed
Categories
(Core :: Layout: Form Controls, defect)
Tracking
()
RESOLVED
FIXED
mozilla42
People
(Reporter: over68, Assigned: enndeakin)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(1 file)
|
5.18 KB,
patch
|
tnikkel
:
review+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Go to https://dl.dropboxusercontent.com/u/95157096/85f61cf7/f4l5ag33qq.html.
2. Open the <select> element.
3. Click on the <select> element to close.
Actual results:
Menu <select> element does not close.
Regression range (mozilla-central):
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=0093691d3715&tochange=b7ee8e13145a
Regression range (mozilla-inbound):
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=1068734a8ee8&tochange=7ccc403458ff
Summary: <select> element not closed → [e10s] <select> element not closed
Updated•10 years ago
|
Blocks: 1171973
Status: UNCONFIRMED → NEW
tracking-e10s:
--- → ?
Ever confirmed: true
Keywords: regression
| Assignee | ||
Comment 2•10 years ago
|
||
This handles popups that are anchored at a rectangle.
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
| Assignee | ||
Comment 3•10 years ago
|
||
Comment on attachment 8634249 [details] [diff] [review]
Potential fix
When a popup is anchored at a screen rectangle, use that rectangle.
Attachment #8634249 -
Flags: review?(tnikkel)
Updated•10 years ago
|
Updated•10 years ago
|
Attachment #8634249 -
Flags: review?(tnikkel) → review+
| Assignee | ||
Comment 4•10 years ago
|
||
url: https://hg.mozilla.org/integration/mozilla-inbound/rev/3819be7da45755731176e775e96a466bb0fc8fa4
changeset: 3819be7da45755731176e775e96a466bb0fc8fa4
user: Neil Deakin <neil@mozilla.com>
date: Mon Jul 20 08:59:50 2015 -0400
description:
Bug 1182607, use the right rectangle for a popup anchored at a rectangle when determining if the mouse click was over the anchor, r=tn
Comment 5•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox42:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
| Assignee | ||
Updated•10 years ago
|
Points: --- → 2
Blocks: e10s-select
You need to log in
before you can comment on or make changes to this bug.
Description
•